еще раз исправила недочеты разметки

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__slogan">
           <span class="advatages__slogan-text">Устали от серости мегаполиса?</span>
-          <span class="advatages__slogan-text">Нам есть, что вам предложить!</span></h2>
+          <span class="advatages__slogan-text">Нам есть, что вам предложить!</span>
+        </h2>
         <div class="advantages__items">
         	<div class="advantages__item">
         	  <h3 class="advantages__item-title">Поднимает настроение</h3>
@@ -56,9 +57,9 @@
     <section class="review">
       <div class="review__wrapper">
         <div class="review__items">
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-1" checked></input>
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-2"></input>
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-3"></input>
+          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-1" checked>
+          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-2">
+          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-3">
           <div class="review__control">
             <label for="review-radio-1"></label>
             <label for="review-radio-2"></label>
@@ -82,9 +83,9 @@
     <section class="prices">
       <div class="prices__wrapper">
         <div class="prices__items">
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-1"></input>
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-2" checked></input>
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-3"></input>
+          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-1">
+          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-2" checked>
+          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-3">
           <div class="price__control">
             <label for="price-radio-1"></label>
             <label for="price-radio-2"></label>
@@ -92,24 +93,24 @@
           </div>
           <table class="prices__table">
             <tr>
-              <th class="table-header"><span class="table-header--bold">база</span>1,99 usd</th>
-              <th class="table-header" data-title="ХИТ"><span class="table-header--hit">хит</span><span class="table-header--bold">стандарт</span>3,99 usd</th>
-              <th class="table-header"><span class="table-header--bold">анлим</span>9,99 usd</th>
+              <th class="table-header"><span class="table-header  table-header--bold">база</span>1,99 usd</th>
+              <th class="table-header" data-title="ХИТ"><span class="table-header  table-header--hit">хит</span><span class="table-header  table-header--bold">стандарт</span>3,99 usd</th>
+              <th class="table-header"><span class="table-header  table-header--bold">анлим</span>9,99 usd</th>
             </tr>
             <tr>
-              <td class="table-item">розовый фильтр<span class="table-item--included">да</span></td>
-              <td class="table-item">розовый фильтр<span class="table-item--included">да</span></td>
-              <td class="table-item">розовый фильтр<span class="table-item--included">да</span></td>
+              <td class="table-item">розовый фильтр<span class="table-item  table-item--included">да</span></td>
+              <td class="table-item">розовый фильтр<span class="table-item  table-item--included">да</span></td>
+              <td class="table-item">розовый фильтр<span class="table-item  table-item--included">да</span></td>
             </tr>
             <tr>
-              <td class="table-item">смайлики <span class="table-item--not-included">нет</span></td>
-              <td class="table-item">смайлики <span class="table-item--included">да</span></td>
-              <td class="table-item">смайлики <span class="table-item--included">да</span></td>
+              <td class="table-item">смайлики <span class="table-item  table-item--not-included">нет</span></td>
+              <td class="table-item">смайлики <span class="table-item  table-item--included">да</span></td>
+              <td class="table-item">смайлики <span class="table-item  table-item--included">да</span></td>
             </tr>
             <tr>
-              <td class="table-item">комментарии <span class="table-item--not-included">нет</span></td>
-              <td class="table-item">комментарии <span class="table-item--not-included">нет</span></td>
-              <td class="table-item">комментарии <span class="table-item--included">да</span></td>
+              <td class="table-item">комментарии <span class="table-item  table-item--not-included">нет</span></td>
+              <td class="table-item">комментарии <span class="table-item  table-item--not-included">нет</span></td>
+              <td class="table-item">комментарии <span class="table-item  table-item--included">да</span></td>
             </tr>
           </table>
         </div>
