--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
             </label>
           </div>
           <div class="form__part">
-            <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
+            <span class="form__text">Ваши безбашенные достижения в путешествии</span>
             <label class="checkbox">
               <input class="checkbox__input" type="checkbox" checked>
               <span class="checkbox__name">Сделал селфи с акулой</span>
@@ -78,6 +78,7 @@
             </label>
           </div>
           <div class="form__part">
+            <span class="form__text">С каким приложением путешествовали?</span>
             <label class="radio">
               <input class="radio__input" type="radio" checked>
               <span class="radio__name">Pink для iOS</span>
