--- a/form.html
+++ b/form.html
@@ -3,30 +3,33 @@
   <head>
 	  <meta charset="UTF-8">
 	  <title>Pink | Конкурс</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo" href="index.html">Pink</a>
-      <nav class="main-nav">
-        <span class="main-nav__toggle  main-nav__toggle--closed">Открыть меню</span>
-        <div class="main-nav__wrapper  main-nav__wrapper--closed">
-          <ul class="main-nav__items">
-            <li class="main-nav__item"><a href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
-            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-            <li class="main-nav__item"><a href="https://htmlacademy.ru">Html Academy</a></li>
-          </ul>
-        </div>
-      </nav>
-      <h1 class="page-header__title">Конкурс на самое безбашеное путешествие с Пинк</h1>
+      <div class="page-header__wrapper">
+        <a class="page-header__logo" href="index.html">Pink</a>
+        <nav class="main-nav">
+          <span class="main-nav__toggle  main-nav__toggle--closed">Открыть меню</span>
+          <div class="main-nav__wrapper  main-nav__wrapper--closed">
+            <ul class="main-nav__items">
+              <li class="main-nav__item"><a href="index.html">Главная</a></li>
+              <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
+              <li class="main-nav__item  main-nav__item--active  main-nav__item--active-shown"><a href="form.html">Конкурс</a></li>
+              <li class="main-nav__item"><a href="https://htmlacademy.ru">Html Academy</a></li>
+            </ul>
+          </div>
+        </nav>
+        <h1 class="page-header__title">Конкурс на самое безбашеное путешествие с Пинк</h1>
+      </div>
     </header>
     <section class="reply">
       <div class="reply__wrapper">
         <h2 class="reply__slogan">
-        Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:
+        Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span>
         </h2>
         <form action="#" class="form">
-          <div class="form__part">
+          <div class="form__part  form__part--author">
             <label class="field-text">
               <span class="field-text__name">имя:</span>
               <input class="field-text__input" type="text" placeholder="Введите ваше имя">
@@ -40,7 +43,7 @@
               <input class="field-text__input" type="text" placeholder="Ну и отчество тоже">
             </label>
           </div>
-          <div class="form__part">
+          <div class="form__part  form__part--grey">
             <span class="form__text">Ваши безбашенные достижения в путешествии</span>
             <label class="checkbox">
               <input class="checkbox__input" type="checkbox" checked>
@@ -94,7 +97,7 @@
           </div>
           <div class="form__part">
             <label class="field-text">
-              <span class="field-text__name">Опишите свои эмоции</span>
+              <span class="field-text__name  field-text__name--textarea">Опишите свои эмоции</span>
               <textarea class="field-text__textarea" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </label>
           </div>
@@ -115,17 +118,23 @@
     </section>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <div class="page-footer__logo">
-          <img src="#" width="147" height="40" alt="pink-logo">
+        <div class="page-footer__item">
+          <div class="page-footer__logo">
+            <img src="#" width="147" height="40" alt="pink-logo">
+          </div>
         </div>
-        <div class="social-links">
-          <a class="social-links__link social-links__link--tweeter" href="#">Tweeter</a>
-          <a class="social-links__link social-links__link--facebook" href="#">Facebook</a>
-          <a class="social-links__link social-links__link--vimeo" href="#">Vimeo</a>
+        <div class="page-footer__item">
+          <div class="social-links">
+            <a class="social-links__link social-links__link--twitter" href="#">Twitter</a>
+            <a class="social-links__link social-links__link--facebook" href="#">Facebook</a>
+            <a class="social-links__link social-links__link--youtube" href="#">youtube</a>
+          </div>
         </div>
-        <div class="page-footer__developer">
-          <span>разработано</span>
-          <a class="page-footer__developer-link" href="https://htmlacademy.ru">Html academy</a>
+        <div class="page-footer__item">
+          <div class="page-footer__developer">
+            <span>разработано</span>
+            <a class="page-footer__developer-link" href="https://htmlacademy.ru">Html academy</a>
+          </div>
         </div>
       </div>
     </footer>
