--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Pink</title>
+<!--     <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
-      <a class="page-header__logo" href="index.html">Pink</a>
-      <nav class="main-nav">
-        <span class="main-nav__toggle  main-nav__toggle--closed">Открыть меню</span>
-        <div class="main-nav__wrapper  main-nav__wrapper--closed">
-          <ul class="main-nav__items">
-            <li class="main-nav__item"><a href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
-            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-            <li class="main-nav__item"><a href="https://htmlacademy.ru">Html Academy</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="info-download">
-    	  <h1 class="info-download__slogan">Взгляните на жизнь иначе!</h1>
-    	  <section class="download">
-          <a class="btn  btn--round" href="#">Скачать приложение</a>
-          <div class="download__links">
-            <a class="download__link  download__link--apple" href="#">Apple</a>
-            <a class="download__link  download__link--android" href="#">Android</a>
-            <a class="download__link  download__link--windows" href="#">Windows</a>
+    <header class="index-header">
+      <div class="index-header__wrapper">
+        <a class="index-header__logo" href="index.html"><span>Pink</span></a>
+        <nav class="main-nav">
+          <span class="main-nav__toggle  main-nav__toggle--closed">Открыть меню</span>
+          <div class="main-nav__wrapper  main-nav__wrapper--closed">
+            <ul class="main-nav__items">
+              <li class="main-nav__item  main-nav__item--active  main-nav__item--active-shown"><a href="index.html">Главная</a></li>
+              <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
+              <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+              <li class="main-nav__item"><a href="https://htmlacademy.ru">HTML Academy</a></li>
+            </ul>
           </div>
-          <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-        </section>
+        </nav>
+        <div class="info-download">
+    	    <h1 class="info-download__slogan">Взгляните на жизнь иначе!</h1>
+    	    <section class="download">
+            <a class="btn  btn--round" href="#">Скачать приложение</a>
+            <div class="download__links">
+              <a class="download__link  download__link--apple" href="#"><span>Apple</span></a>
+              <a class="download__link  download__link--android" href="#"><span>Android</span></a>
+              <a class="download__link  download__link--windows" href="#"><span>Windows</span></a>
+            </div>
+            <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </section>
+        </div>
       </div>
     </header>
-    </div>
     <section class="advantages">
       <div class="advantages__wrapper">
         <h2 class="advantages__slogan">
@@ -51,31 +54,41 @@
         	  <h3 class="advantages__item-title">Заводит новых друзей</h3>
         	  <p class="advantages__item-text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых друзей</p>
         	</div>
+          <div class="advantages__item  advantages__item--last">
+            <h3 class="advantages__item-title">Эффект на 24 часа!</h3>
+            <p class="advantages__item-text">Британские ученые провели исследованияи доказали, что положительный эффектот использования приложения длится целые сутки!</p>
+            <a href="#">Узнать больше об исследовании</a>
+          </div>
         </div>
       </div>
     </section>
     <section class="review">
       <div class="review__wrapper">
         <div class="review__items">
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-1" checked>
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-2">
-          <input class="slider-nav__swither" type="radio" name="review" id="review-radio-3">
-          <div class="review__control">
-            <label for="review-radio-1"></label>
-            <label for="review-radio-2"></label>
-            <label for="review-radio-3"></label>
+          <div class="slider">
+            <input class="slider-nav__swither" type="radio" name="review" id="review-radio-1" checked>
+            <input class="slider-nav__swither" type="radio" name="review" id="review-radio-2">
+            <input class="slider-nav__swither" type="radio" name="review" id="review-radio-3">
+            <div class="review__control">
+              <label for="review-radio-1"></label>
+              <label for="review-radio-2"></label>
+              <label for="review-radio-3"></label>
+            </div>
           </div>
           <blockquote class="review__item  review__item--active">
-            <cite class="reviews__auhor-name">Николай Петров</cite>
+            <cite class="review__author-name">Николай Петров</cite>
             <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            <span class="review__author-info">25 лет, водитель трамвая</span>
           </blockquote>
           <blockquote class="review__item">
-            <cite class="reviews__auhor-name">Николай Петров</cite>
+            <cite class="review__author-name">Николай Петров</cite>
             <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            <span class="review__author-info">25 лет, водитель трамвая</span>
           </blockquote>
           <blockquote class="review__item">
-            <cite class="reviews__auhor-name">Николай Петров</cite>
+            <cite class="review__author-name">Николай Петров</cite>
             <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            <span class="review__author-info">25 лет, водитель трамвая</span>
           </blockquote>
         </div>
       </div>
@@ -83,13 +96,15 @@
     <section class="prices">
       <div class="prices__wrapper">
         <div class="prices__items">
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-1">
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-2" checked>
-          <input class="slider-nav__swither" type="radio" name="price" id="price-radio-3">
-          <div class="price__control">
-            <label for="price-radio-1"></label>
-            <label for="price-radio-2"></label>
-            <label for="price-radio-3"></label>
+          <div class="slider">
+            <input class="slider-nav__swither" type="radio" name="price" id="price-radio-1">
+            <input class="slider-nav__swither" type="radio" name="price" id="price-radio-2" checked>
+            <input class="slider-nav__swither" type="radio" name="price" id="price-radio-3">
+            <div class="price__control">
+              <label for="price-radio-1"></label>
+              <label for="price-radio-2"></label>
+              <label for="price-radio-3"></label>
+            </div>
           </div>
           <table class="prices__table">
             <tr>
@@ -116,7 +131,7 @@
         </div>
       </div>
     </section>
-    <footer class="page-footer">
+    <footer class="page-footer  page-footer--index">
       <div class="page-footer__wrapper">
         <div class="contacts">
           <h2 class="contacts__slogan"> Остались вопросы? Свяжитесь с нами!</h2>
@@ -128,13 +143,35 @@
             <b class="contacts__item-info">Пишите:</b>
             <a class="contacts__text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </div>
-          <div class="contacts__item">
+          <div class="contacts__item  contacts__item--street">
             <b class="contacts__item-info">Приезжайте в гости:</b>
             <span class="contacts__text">ул. Большая Конюшенная, 19/8</span>
           </div>
         </div>
       </div>
       <div class="page-footer__map"></div>
+      <div class="page-footer__items">
+        <div class="page-footer__wrapper">
+          <div class="page-footer__item  page-footer__item--index">
+            <div class="page-footer__logo">
+              <img src="#" width="147" height="40" alt="pink-logo">
+            </div>
+          </div>
+          <div class="page-footer__item  page-footer__item--index">
+            <div class="social-links">
+              <a class="social-links__link social-links__link--twitter" href="#"><span>Twitter</span></a>
+              <a class="social-links__link social-links__link--facebook" href="#">Facebook</a>
+              <a class="social-links__link social-links__link--youtube" href="#">youtube</a>
+            </div>
+          </div>
+          <div class="page-footer__item  page-footer__item--index">
+            <div class="page-footer__developer">
+              <span>разработано</span>
+              <a class="page-footer__developer-link" href="https://htmlacademy.ru">Html academy</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
